fix layout on iphone

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -4,20 +4,18 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: center;
 	position: relative;
-	overflow: hidden;
 	width: 100%;
 	box-sizing: border-box;
 	padding: 0 15px;
-	margin: auto;
+	height: calc(100vh - (128px + 96px));
 
 	@include lg {
-		margin-top: 0px;
+		margin: 0 auto;
 		flex-direction: row;
 		justify-content: space-between;
-		align-items: center;
 		width: 980px;
-		height: calc(100vh - (128px + 96px));
 	}
 
 	@include xl {
