--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -10,16 +10,11 @@
 
 html {
 	background-color: black;
-}
-
-body {
-	height: 100vh;
-	font-family: 'Regular-Semibold';
 	background-color: white;
 }
 
-.App {
-	overflow-y: hidden;
+body {
+	font-family: 'Regular-Semibold';
 }
 
 h2,
